templates/network.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Network Stack

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: pdw-vpc-sandbox-core

  # ------------------------------------ #
  # Public Subnets                       #
  # ------------------------------------ #

  PublicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: pdw-public-subnet-sandbox-1a-region

  PublicSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs ""]
      Tags:
        - Key: Name
          Value: pdw-public-subnet-sandbox-1b-region

  # ------------------------------------ #
  # Private Subnets                      #
  # ------------------------------------ #

  PrivateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: pdw-private-subnet-sandbox-1a-region

  PrivateSubnet2a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: pdw-private-subnet-sandbox-2a-region

  PrivateSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.0.5.0/24
      AvailabilityZone: !Select [1, !GetAZs ""]
      Tags:
        - Key: Name
          Value: pdw-private-subnet-sandbox-1b-region

  PrivateSubnet2b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: 10.0.6.0/24
      AvailabilityZone: !Select [1, !GetAZs ""]
      Tags:
        - Key: Name
          Value: pdw-private-subnet-sandbox-2b-region

  # ------------------------------------ #
  # Route Tables                         #
  # ------------------------------------ #

  RouteTablePublicSubnet1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: pdw-route-table-sandbox-public-subnet

  RouteTablePrivateSubnet1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: pdw-route-table-sandbox-private-subnet-1

  RouteTablePrivateSubnet2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: pdw-route-table-sandbox-private-subnet-2

  # ------------------------------------ #
  # Route Tables Subnet Attachment       #
  # ------------------------------------ #

  PublicSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePublicSubnet1
      SubnetId: !Ref PublicSubnet1a

  PublicSubnet1bRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePublicSubnet1
      SubnetId: !Ref PublicSubnet1b

  PrivateSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePrivateSubnet1
      SubnetId: !Ref PrivateSubnet1a

  PrivateSubnet1bRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePrivateSubnet1
      SubnetId: !Ref PrivateSubnet1b

  PrivateSubnet2aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePrivateSubnet2
      SubnetId: !Ref PrivateSubnet2a

  PrivateSubnet2bRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePrivateSubnet2
      SubnetId: !Ref PrivateSubnet2b

  # ------------------------------------ #
  # Internet Gateway                     #
  # ------------------------------------ #

  InternetGateWay:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: pdw-igw-sandbox

  AttachInternetGateWay:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateWay
      VpcId: !Ref Vpc

  # ------------------------------------ #
  # NAT Gateway                          #
  # ------------------------------------ #
  # HACK:: Creating Just 1 nat for saving some dollars
  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1a
      Tags:
        - Key: stack
          Value: production

  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  # ------------------------------------ #
  # Routes                               #
  # ------------------------------------ #

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePublicSubnet1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateWay

  PublicRoutePrivateSubnet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePrivateSubnet1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

Outputs:
  VpcVpcId:
    Description: VPC ID
    Value: !Ref Vpc
    Export:
      Name: "pdw-Vpc:VpcId"

  VpcVpcCidr:
    Description: VPC CIDR
    Value: !GetAtt Vpc.CidrBlock
    Export:
      Name: "pdw-Vpc:VpcCidr"

  PublicSubnet1a:
    Value: !Ref PublicSubnet1a
    Export:
      Name: "pdw-Subnet:PublicSubnet1a"

  PublicSubnet1b:
    Value: !Ref PublicSubnet1b
    Export:
      Name: "pdw-Subnet:PublicSubnet1b"

  PrivateSubnet1a:
    Value: !Ref PrivateSubnet1a
    Export:
      Name: "pdw-Subnet:PrivateSubnet1a"

  PrivateSubnet2a:
    Value: !Ref PrivateSubnet2a
    Export:
      Name: "pdw-Subnet:PrivateSubnet2a"

  PrivateSubnet1b:
    Value: !Ref PrivateSubnet1b
    Export:
      Name: "pdw-Subnet:PrivateSubnet1b"

  PrivateSubnet2b:
    Value: !Ref PrivateSubnet2b
    Export:
      Name: "pdw-Subnet:PrivateSubnet2b"
